@@ -12,16 +12,28 @@ import org.lwjgl.opengl.GL11;
 
 public class Object3DBuilder {
 	
-	/* The static method used to create a textured cube renderable object array given the
+	/* The static method used to create a muti-textured cube renderable object array given the
 	 * width, height and colours */
-	public static RenderableObject3D createTexturedCube(float width, float height, float depth, Colour[] colours) {
-		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colours), createCubeT());
+	public static RenderableObject3D createCube(Image[] textures, float width, float height, float depth, Colour[] colours) {
+		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colours), createCubeT(textures));
 	}
 	
-	/* The static method used to create a cube quad renderable object array given the
+	/* The static method used to create a multi-cube renderable object array given the
 	 * width, height and colour */
-	public static RenderableObject3D createTexturedCube(float width, float height, float depth, Colour colour) {
-		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colour), createCubeT());
+	public static RenderableObject3D createCube(Image[] textures, float width, float height, float depth, Colour colour) {
+		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colour), createCubeT(textures));
+	}
+	
+	/* The static method used to create a textured cube renderable object array given the
+	 * width, height and colours */
+	public static RenderableObject3D createCube(Image texture, float width, float height, float depth, Colour[] colours) {
+		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colours), createCubeT(texture));
+	}
+	
+	/* The static method used to create a textured cube renderable object array given the
+	 * width, height and colour */
+	public static RenderableObject3D createCube(Image texture, float width, float height, float depth, Colour colour) {
+		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth), createColourArray(24, colour), createCubeT(texture));
 	}
 	
 	/* The static method used to create a cube renderable object array given the
@@ -42,44 +54,85 @@ public class Object3DBuilder {
 		return new RenderableObject3D(GL11.GL_QUADS, createCubeV(width, height, depth));
 	}
 	
-	/* The static method used to create a cube's texture coordinates */
-	public static float[] createCubeT() {
+	/* The static method used to create a cube's texture coordinates with multiple textures */
+	public static float[] createCubeT(Image[] t) {
 		return new float[] {
 				//Front face
-				0, 0,
-				1, 0,
-				1, 1,
-				0, 1,
+				t[0].left, t[0].top,
+				t[0].right, t[0].top,
+				t[0].right, t[0].bottom,
+				t[0].left, t[0].bottom,
 				
 				//Left face
-				1, 1,
-				0, 1,
-				0, 0,
-				1, 0,
+				t[2].right, t[2].bottom,
+				t[2].left, t[2].bottom,
+				t[2].left, t[2].top,
+				t[2].right, t[2].top,
 				
 				//Back face
-				1, 0,
-				0, 0,
-				0, 1,
-				1, 1,
+				t[1].right, t[1].top,
+				t[1].left, t[1].top,
+				t[1].left, t[1].bottom,
+				t[1].right, t[1].bottom,
 				
 				//Bottom face
-				1, 0,
-				1, 1,
-				0, 1,
-				0, 0,
+				t[5].right, t[5].top,
+				t[5].right, t[5].bottom,
+				t[5].left, t[5].top,
+				t[5].left, t[5].bottom,
 				
 				//Right face
-				1, 1,
-				0, 1,
-				0, 0,
-				1, 0,
+				t[3].right, t[3].bottom,
+				t[3].left, t[3].bottom,
+				t[3].left, t[3].top,
+				t[3].right, t[3].top,
 				
 				//Top face
-				1, 0,
-				1, 1,
-				0, 1,
-				0, 0
+				t[4].right, t[4].top,
+				t[4].right, t[4].bottom,
+				t[4].left, t[4].bottom,
+				t[4].left, t[4].top
+		};
+	}
+	
+	/* The static method used to create a cube's texture coordinates with a single texture */
+	public static float[] createCubeT(Image t) {
+		return new float[] {
+				//Front face
+				t.left, t.top,
+				t.right, t.top,
+				t.right, t.bottom,
+				t.left, t.bottom,
+				
+				//Left face
+				t.right, t.bottom,
+				t.left, t.bottom,
+				t.left, t.top,
+				t.right, t.top,
+				
+				//Back face
+				t.right, t.top,
+				t.left, t.top,
+				t.left, t.bottom,
+				t.right, t.bottom,
+				
+				//Bottom face
+				t.right, t.top,
+				t.right, t.bottom,
+				t.left, t.top,
+				t.left, t.bottom,
+				
+				//Right face
+				t.right, t.bottom,
+				t.left, t.bottom,
+				t.left, t.top,
+				t.right, t.top,
+				
+				//Top face
+				t.right, t.top,
+				t.right, t.bottom,
+				t.left, t.bottom,
+				t.left, t.top
 		};
 	}
 	
@@ -126,14 +179,14 @@ public class Object3DBuilder {
 	
 	/* The static method used to create a textured quad renderable object array given the
 	 * width, height and colours */
-	public static RenderableObject3D createTexturedQuad(float width, float height, Colour[] colours) {
-		return new RenderableObject3D(GL11.GL_QUADS, createQuadV(width, height), createColourArray(4, colours), createQuadT());
+	public static RenderableObject3D createQuad(Image texture, float width, float height, Colour[] colours) {
+		return new RenderableObject3D(GL11.GL_QUADS, createQuadV(width, height), createColourArray(4, colours), createQuadT(texture));
 	}
 	
 	/* The static method used to create a textured quad renderable object array given the
 	 * width, height and colour */
-	public static RenderableObject3D createTexturedQuad(float width, float height, Colour colour) {
-		return new RenderableObject3D(GL11.GL_QUADS, createQuadV(width, height), createColourArray(4, colour), createQuadT());
+	public static RenderableObject3D createQuad(Image texture, float width, float height, Colour colour) {
+		return new RenderableObject3D(GL11.GL_QUADS, createQuadV(width, height), createColourArray(4, colour), createQuadT(texture));
 	}
 	
 	/* The static method used to create a quad renderable object array given the
@@ -175,12 +228,12 @@ public class Object3DBuilder {
 	}
 	
 	/* The static method used to create a quads texture coordinates */
-	public static float[] createQuadT() {
+	public static float[] createQuadT(Image t) {
 		return new float[] {
-				0, 0,
-				1, 0,
-				1, 1,
-				0, 1
+				t.left, t.top,
+				t.right, t.top,
+				t.right, t.bottom,
+				t.left, t.bottom
 		};
 	}
 	
