@@ -1,4 +1,9 @@
 ------------------------------------------------------
+Release 0 | Beta 0 | Development 3 | Experimental 2
+
+* Added ImageSet
+
+------------------------------------------------------
 Release 0 | Beta 0 | Development 3 | Experimental 1
 
 * Added Vector2D
